# bandit

./: LICENSE  README.md  pyproject.toml  run_lucb_policy.py  run_se_policy.py
jn/: 00_Chap6_最適腕識別_プロトタイプ.ipynb  01_Chap6_最適腕識別_方策を外出し.ipynb
lib/: arms.py  best_arm_policies.py
