[tool.poetry]
name = "bandit"
version = "0.1.0"
description = ""
authors = ["calpis10000 <calpis10000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.4"
pandas = "^1.0.4"
jupyter = "^1.0.0"
lab = "^6.0"
xlrd = "^1.2.0"
jupyterlab = "^2.2.0"
scikit-learn = "<22.0.0"
econml = "^0.7.0"
seaborn = "^0.10.1"
autopep8 = "^1.5.3"
jupyterlab_code_formatter = "^1.3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
